showing count in front
