# src/app/services/models/woo-commerce-counts-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface WooCommerceCountsDto {
+  customerCount?: number;
+  orderCount?: number;
+  productCount?: number;
+  userCount?: number;
+}
