# src/openapi/openapi.json
@@ -581,7 +581,7 @@
                 "parameters": [
                     {
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true,
                         "schema": {
                             "type": "integer",
@@ -1260,6 +1260,44 @@
                 }
             }
         },
+        "/woocommerce/orders/{id}/status": {
+            "patch": {
+                "tags": [
+                    "woo-order-rest-controller"
+                ],
+                "operationId": "updateOrderStatus",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/woocommerce/products": {
             "get": {
                 "tags": [
@@ -1293,6 +1331,26 @@
                             "application/json": {
                                 "schema": {
                                     "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/woocommerce/count": {
+            "get": {
+                "tags": [
+                    "dashhboard-contoller"
+                ],
+                "operationId": "getCounts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/WooCommerceCountsDTO"
                                 }
                             }
                         }
@@ -1726,6 +1784,27 @@
                 "properties": {
                     "token": {
                         "type": "string"
+                    }
+                }
+            },
+            "WooCommerceCountsDTO": {
+                "type": "object",
+                "properties": {
+                    "productCount": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "orderCount": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "userCount": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "customerCount": {
+                        "type": "integer",
+                        "format": "int32"
                     }
                 }
             }
